--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,16 @@
 /* General Styles */
-body {
-  font-family: Arial, sans-serif;
+html, body {
+  height: 100%;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  font-family: Arial, sans-serif;
   color: #333;
   background-color: #f4f4f4; /* Light grey background */
+}
+
+body {
+  display: flex;
+  flex-direction: column;
 }
 
 header {
@@ -43,6 +48,13 @@ header nav ul li a:hover {
   padding: 100px 0;
 }
 
+main {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .intro, .about, .experience, .skills, .testimonials, .services, .portfolio, .contact {
   padding: 20px;
   background: #fff; /* White background for content sections */
@@ -72,6 +84,9 @@ footer {
   color: #fff;
   text-align: center;
   padding: 10px 0;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
 
 form {
