--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@ html, body {
 body {
   display: flex;
   flex-direction: column;
+  min-height: 100vh;
 }
 
 header {
@@ -50,9 +51,6 @@ header nav ul li a:hover {
 
 main {
   flex: 1;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 
 .intro, .about, .experience, .skills, .testimonials, .services, .portfolio, .contact {
@@ -84,9 +82,6 @@ footer {
   color: #fff;
   text-align: center;
   padding: 10px 0;
-  position: absolute;
-  bottom: 0;
-  width: 100%;
 }
 
 form {
